# MCP_project

./: .gitignore  CMakeLists.txt  README.md  build.bat  test.py
include/: mcp_server.h
src/: main.cpp  mcp_server.cpp  mcp_server.h  quote_api.cpp  quote_api.h  weather_api.cpp  weather_api.h
